added twitter endpoint

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "passport": "^0.5.2",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "twitter-api-v2": "^1.11.2"
   },
   "engines": {
     "node": "16.14.0"
