--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@jimp/plugin-circle": "^0.16.1",
     "axios": "^0.26.1",
     "ethers": "^5.5.4",
     "express": "^4.17.3",
