--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@jimp/plugin-circle": "^0.16.1",
     "axios": "^0.26.1",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "ethers": "^5.5.4",
     "express": "^4.17.3",
     "jimp": "^0.16.1",
