--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "axios": "^0.26.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "ethers": "^5.5.4",
     "express": "^4.17.3",
     "jimp": "^0.16.1",
     "nodemon": "^2.0.19",
+    "pg": "^8.7.3",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
     "twitter-api-v2": "^1.11.2",
